fixed mobile spacing

--- a/Styles/nav-style.css
+++ b/Styles/nav-style.css
@@ -84,7 +84,7 @@
     padding-left: 20px;
     margin-bottom: 0;
     border-bottom: none;
-    font-size: 1.3em;
+    font-size: 1.2em;
   }
 
   .side-nav-opt {
